force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>This Object created for Job seekers.</description>
    <label>Job Application</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>