force-app/main/default/objects/Job_Application__c/fields/Job_Placement_Message__c.field-meta.xml
<CustomField>
    <fullName>Job_Placement_Message__c</fullName>
    <label>Job Placement Message</label>
    <length>200</length>
    <type>Text</type>
</CustomField>