force-app/main/default/objects/Job_Application__c/fields/Manager_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Status__c</fullName>
    <label>Manager Approval Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>