force-app/main/default/objects/Job_Application__c/fields/Passport_Submission_DeadLine__c.field-meta.xml
<CustomField>
    <fullName>Passport_Submission_DeadLine__c</fullName>
    <label>Passport Submission DeadLine</label>
    <type>Date</type>
</CustomField>