force-app/main/default/objects/Job_Application__c/listViews/QueuesLearning_Job_Application.listView-meta.xml
<ListView>
    <fullName>QueuesLearning_Job_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>QueuesLearning</label>
    <queue>QueuesLearning</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>